# localstack-extension-aws-request-interceptor

./: README.md  setup.cfg
request_interceptor/: __init__.py  extension.py
