[metadata]
name = localstack-extension-aws-request-interceptor
version = 0.1.0
summary = LocalStack Extension: aws-request-interceptor
url = https://github.com/localstack-samples/localstack-extension-aws-request-interceptor
author = LocalStack
author_email = info@localstack.cloud
description = Extension example to show how to intercept AWS requests
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0

[options.entry_points]
localstack.extensions =
    localstack-extension-aws-request-interceptor = request_interceptor.extension:RequestInterceptorExtension
